--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 * {
-	font-family: "IBM Plex Sans KR", sans-serif;
-	font-weight: 400;
-	font-style: normal;
+  font-family: "Jua", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .ellipsis {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 1;
-	-webkit-box-orient: vertical;
-  }
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.ellipsis2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+#loading {
+  width: 100%; height: 100%; top: 0; left: 0; position: fixed;
+  display: block; opacity: 0.95; background: white; z-index: 99; text-align: center;
+}
+
+#spinner {
+ width: 50px; height: 50px; top: 50%; left: 50%; 
+ position: fixed; z-index: 100;
+}
